--- a/src/index.html
+++ b/src/index.html
@@ -8,8 +8,12 @@
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="assets/images/logo-charset.ico">
+
   <!-- JQuery-->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js"></script>
+
+  <!-- Overlay -->
+  <script src="https://cdn.jsdelivr.net/npm/gasparesganga-jquery-loading-overlay@2.1.6/dist/loadingoverlay.min.js"></script>
 
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
