--- a/src/index.html
+++ b/src/index.html
@@ -10,6 +10,9 @@
   <link rel="icon" type="image/x-icon" href="assets/images/logo-charset.ico">
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/2.2.3/jquery.js"></script>
 
+  <!--Fonts Awesome-->
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.2/css/all.css" integrity="sha384-fnmOCqbTlWIlj8LyTjo7mOUStjsKC4pOpQbqyi7RrhN7udi9RwhKkMHpvLbHG9Sr" crossorigin="anonymous">
+
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
 
